--- a/CodingGamesPuzzes/GenericPuzzleRunner/GenericPuzzleRunner.csproj
+++ b/CodingGamesPuzzes/GenericPuzzleRunner/GenericPuzzleRunner.csproj
@@ -43,8 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Runner.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TeadsChallenge.cs" />
     <Compile Include="TheLabyrinth.cs" />
   </ItemGroup>
   <ItemGroup>
